--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col items-center">
-<form [formGroup]="registerForm" (ngSubmit)=submitForm() class="flex flex-col items-center gap-10 shadow-xl p-20 rounded-md bg-gradient-to-r from-slate-800 to-cyan-800">
+<form [formGroup]="registerForm" (ngSubmit)=submitForm() class="homeForm">
   <h1 class="class-bold text-2xl text-white">Register guide</h1>
 
   <label class="flex flex-col">
