--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
+
+<div class="mainBody"><router-outlet></router-outlet></div>
+
+<div *ngIf=true><app-sidebar></app-sidebar>Render sidebar if true</div>
+
