--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="flex justify-between px-20 py-10 shadow-2xl items-center">
   <ul>
-    <h1 class="font-bold text-4xl">Luxor</h1>
+    <h1 class="font-bold text-4xl text-white">Luxor</h1>
   </ul>
   <ul class="flex gap-5 items-center">
     <li class="hover:underline hover:underline-offset-4"><a routerLink="/">Home</a></li>
