project skele cont

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -5,4 +5,6 @@
   <a routerLink="/sky-condition" class="sidebarLink">Current sky</a><br>
   <a routerLink="/geolocation" class="sidebarLink">Select location</a><br>
   <a routerLink="/constellation" class="sidebarLink">Track constellation</a><br>
+  <a routerLink="/view-saved-date" class="sidebarLink">View saved date</a><br>
+  <a routerLink="/harmonic-mapping" class="sidebarLink">Harmonic mapping</a><br>
 </div>
