--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,1 +1,2 @@
-<p>about works!</p>
+<p>About: Every english letter is formed from a single shape (toroidal spiral).  Connect numbers, letters, atoms, planets
+Explaination of the mathematics of harmonic astrology and its uses.  Integrative engineering vs control volume thinking.</p>
