--- a/src/app/pages/harmonic-mapping/harmonic-mapping.component.html
+++ b/src/app/pages/harmonic-mapping/harmonic-mapping.component.html
@@ -1,1 +1,7 @@
-<p>Custom build harmonic function mapped onto circle for visualization and displayed with custom made planet images</p>
+<p>two drop down menus for selection of planets</p>
+<div class="center">
+
+<div id="circle"><div id="planet1"></div><div id="planet2"></div></div>
+
+</div>
+
