--- a/src/app/pages/sky-condition/sky-condition.component.html
+++ b/src/app/pages/sky-condition/sky-condition.component.html
@@ -1,1 +1,7 @@
-<p>sky-condition works!</p>
+orbital map + time above horizon
+
+<div class="container">
+  <div class="sun"></div>
+  <div class="mercury"></div>
+  <div class="venus"></div>
+</div>
