--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,7 @@ body {
   background: url(assets/images/Luxor.jpg);
   background-size: cover;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
