--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
 
 <div class="mainBody"><router-outlet></router-outlet></div>
 
-<div *ngIf=true><app-sidebar></app-sidebar>Render sidebar if true</div>
+<div *ngIf=true><app-sidebar></app-sidebar></div>
 
