--- a/src/app/pages/constellation/constellation.component.html
+++ b/src/app/pages/constellation/constellation.component.html
@@ -1,2 +1,11 @@
 <p>drop down based on static array</p>
 <p>confirm selection, add to right sidebar?</p>
+
+<form [formGroup]="constellationForm" (ngSubmit)="submit()">
+  <select formName="constellationPicker" class="px-5 py-2 rounded-md">
+    <option [ngValue]="null" disabled>Select Country</option>
+    <option *ngFor="let constellation of constellations" [ngValue]="constellation.id">{{constellation.name}}</option>
+  </select>
+  <br>
+  <button type="submit" class="bg-white px-5 py-2 rounded-md shadow-xl">Submit</button>
+</form>
