--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,2 +1,13 @@
 <p>About: Every english letter is formed from a single shape (toroidal spiral).  Connect numbers, letters, atoms, planets
 Explaination of the mathematics of harmonic astrology and its uses.  Integrative engineering vs control volume thinking.</p>
+
+<br>
+
+venus orbit = 225 days;
+earth orbit = 365 days;
+
+255/365 = .618;
+
+1/1.618(phi) ~=.618
+
+spiral arms of galaxy in phi pattern
