track login state

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,13 +1,73 @@
-<p>About: Every english letter is formed from a single shape (toroidal spiral).  Connect numbers, letters, atoms, planets
-Explaination of the mathematics of harmonic astrology and its uses.  Integrative engineering vs control volume thinking.</p>
+<div>
+<p>
+  About: (unfinished) Connect numbers, letters, atoms, planets
+</p>
+<br>
+<p>
+"If you want to find the secrets of the universe, think in terms of energy, frequency and vibration."<br>
+  --Nikola Tesla
+  </p>
+  <br>
+  <p>
+"...The so-called Hertz waves are still considered a reality, proving that light is electrical in its nature, and also that the ether is capable of transmitting transverse vibrations of frequencies however low.  This view has become untenable, since I showed that the universal medium is a gaseous body in which only longitudinal pulses can be propagated, involving alternating compressions and expansions similar to those produced by sound waves in the air.  Thus, a wireless transmitter does not emit Hertz waves, which are a myth, but sound waves in ether, behaving in every respect like those in air, except that owning to the great elastic force and extremely small density of the medium, their speed is that of light."
+  --Nikola Tesla's statement of 11 September 1932, New York Herald Tribune
+<img src="assets/images/tesla.png">
+</p>
+<br>
+<p>
+A harmonic has been defined as "a signal or wave whose frequency is an integral (whole-number) multiple of the frequency of some reference signal or wave."
+Thus, "for a signal whose fundamental frequency is f, the second harmonic has a frequency of 2f, the third harmonic has a frequency of 3f, and so on...
+In physics and in music (which are fields in which the term "harmonic" was first used), the reference signal or wave" (the first harmonic) can be of any length.
+But in astrology we are always talking about the harmonics of a circle.  Therefore, in astrology, the first harmonic always has a length of 360 degrees, the second harmonic has a length of 360/2=180 degrees, and so on.
+So this means that the second harmonic refers to a signal that occurs(or a wave that peaks) at two points around the circle.<br>
+  --David Hambin "Harmonic Astrology in Practice" pg 1
+</p>
+<br>
+<p>
+When, following the Egyptians, Plato and the Alexandrian Greeks affirmed that there is no mathematical science other than geometry, this axiom, because it was a warning, implied knowledge of the existence of a possible imaginary mathematics, a "play of the mind."
+If our science and philosophy assumes that everything in the Universe has quantity, that everything is composed of quantities, however infinitesimal they may be, then we must reckon with these quantitative units by placing them in a space that is itself limited.  Four-dimensional geometry does nothing to alter this disposition of the mind, but only further displays our "quantified" field of vision.
+Paradoxically, this materialistic mentality ultimately leads to thinking with abstractions until there is no possibility of constructing a thought without bringing in terms for which there is no concept.  By refusing the abstraction of the creative principle we are forced to call in an arbitrary abstraction, a "supposition" or hypothesis, at every moment.
+It is thus obvious that if in the philosophical foundation there is a recognition of an original abstraction, and if a strict observance of this principle is respected, then all the resulting thought will be absolutely different from our own.
+From the outset, two basic elements of our mathematics would be eliminated: <i>zero</i> and <i>infinity</i>.  These words, which designate a negation and the unknowable, have no concept.<br>
+ --Schwaller De Lubicz, "The Temple of Man, Vol. 1" pg 126
+</p>
+<br>
+<p>
+Adding nodes to spheres results in the electron orbitals.
+  For a vibrating string, the simplest wave, called the first harmonic, produces a pattern seen in the image.  With each increase in energy, the wave crosses the center axis.  These crossings are called nodes.  So the second harmonic has one node and the third harmonic has two nodes.  <i>As the number of nodes increase, so does the energy of the wave.</i>
+  <img src="assets/images/harmonics.png">
+  Funny thing is we all know this but we don't take the next step and relate it to spherical harmonics.  The lessons learned with strings are never properly extended to spheres.  And yet, everything we need has already been said.  So, to be clear, the first and simplest three dimensional wave is a sphere.  We call it an S-orbital. It has no nodes.  So, just like the string, the next highest energy wave must add a node, but how do you add a node to a sphere?
+  If this were a string then a node would force the string to cross the center axis, but a sphere has no such center axis.  For spheres, all nodes must pass through its center.  Physically, adding a node means slicing through the center of the sphere, that is, we must slice the sphere in half.  There is no preferred direction when making this slice.  A simple horizontal slice along the xy plane would suffice and is shown below.
+  <img src="assets/images/sp_h1.png">
+  Adding a second nodal plane to a sphere produces a d-orbital.  There are two equivalent ways that a second node can be added to a sphere.  The nodes can either be perpendicular to one another, or they can be parallel to one another.
+  <img src="assets/images/sp_h2.png">
+  These planes are not actually parallel because all nodes must pass through the center of the sphere.  Rather, these nodes have a conical shape whose tip sits at the center of the sphere.
+  --Steven Fawl, Professor of Chemistry
+</p>
+<br>
+<p>
+Flame letters - Simple golden mean (1.618/phi) spiral wrapped around torus(electromagnetism), top view.  Other views make an alphabet of symmetry...angle-ish
+  <img src="assets/images/flame_letter.png">
+  An example of the golden mean spiral producing the english letter 'b'.  All 26 letters can be produced from this single shape.
+  <img src="assets/images/ba.png">
+  --Dan Winter
+</p>
+
 
 <br>
 
 venus orbit = 225 days;
 earth orbit = 365 days;
 
-255/365 = .618;
+255/365 ~= .618;
 
-1/1.618(phi) ~=.618
+1/1.618(phi) = 1.618-1 = .618
 
 spiral arms of galaxy in phi pattern
+  <img src="assets/images/m101.jpg">
+
+<br>
+
+6 10 pm/toronto/kb/ps/o wv in nm
+
+</div>
