--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -1,3 +1,7 @@
-p {
+div {
+  background-color: rgba(50, 50, 50, .85);
+  background-filter: blur(10px);
   color: white;
+  border-radius: 1%;
+  padding: 20px;
 }
