--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -1,4 +1,4 @@
-.homeForm {
+.loginForm {
   @apply flex;
   @apply flex-col;
   @apply items-center;
@@ -8,7 +8,7 @@
   @apply rounded-md;
 }
 
-.homeForm {
+.loginForm {
   background-color: rgba(50, 50, 50, .45);
   background-filter: blur(10px);
 }
