--- a/src/app/pages/constellation/constellation.component.html
+++ b/src/app/pages/constellation/constellation.component.html
@@ -2,9 +2,9 @@
 <p>confirm selection, add to right sidebar?</p>
 
 <form [formGroup]="constellationForm" (ngSubmit)="submit()">
-  <select formName="constellationPicker" class="px-5 py-2 rounded-md">
-    <option [ngValue]="null" disabled>Select Country</option>
-    <option *ngFor="let constellation of constellations" [ngValue]="constellation.id">{{constellation.name}}</option>
+  <select formName="constellationPicker" formControlName="constellation" class="px-5 py-2 rounded-md">
+    <option [ngValue]="null" disabled>Select Constellation</option>
+    <option *ngFor="let constellation of constellations" [ngValue]="constellation.name">{{constellation.name}}</option>
   </select>
   <br>
   <button type="submit" class="bg-white px-5 py-2 rounded-md shadow-xl">Submit</button>
