--- a/src/app/pages/view-saved-date/view-saved-date.component.html
+++ b/src/app/pages/view-saved-date/view-saved-date.component.html
@@ -1,1 +1,4 @@
-<p>view-saved-date works! Button for side-by-side with current and Button for adding notes</p>
+<div class="solar-system">
+  <div class="mercury" [style.--rotate.deg]="(mercuryAngle)"></div>
+  <div class="venus" [style.--rotate.deg]="(venusAngle)"></div>
+</div>
