--- a/src/app/pages/view-saved-date/view-saved-date.component.html
+++ b/src/app/pages/view-saved-date/view-saved-date.component.html
@@ -1,4 +1,4 @@
 <div class="solar-system">
-  <div class="mercury" [style.--rotate.deg]="(mercuryAngle)"></div>
-  <div class="venus" [style.--rotate.deg]="(venusAngle)"></div>
+  <div class="mercury" [style.--rotate.deg]="mercuryRotation"></div>
+  <div class="venus" [style.--rotate.deg]="venusRotation"></div>
 </div>
