--- a/src/app/pages/view-saved-date/view-saved-date.component.css
+++ b/src/app/pages/view-saved-date/view-saved-date.component.css
@@ -1,8 +1,3 @@
-:host {
-  display:grid;
-  place-items: center;
-}
-
 .solar-system {
   --size: 450px;
   position: relative;
@@ -15,9 +10,10 @@
 .mercury, .venus {
   position: absolute;
   height: 40%;
-  width: 4px;
+  width: 2px;
   top: 10%;
   left: 50%;
+  background-color: red;
   transform-origin: 50% 100%;
   transform: rotate(var(--rotate));
 }
