--- a/src/app/pages/view-saved-date/view-saved-date.component.html
+++ b/src/app/pages/view-saved-date/view-saved-date.component.html
@@ -1,5 +1,9 @@
+<div class="grid-container">
+  <div class="selection">test</div>
 <div class="solar-system">
   <div class="mercury" [style.--rotate.deg]="mercuryRotation"></div>
   <div class="venus" [style.--rotate.deg]="venusRotation"></div>
   <div class="mars" [style.--rotate.deg]="marsRotation"></div>
+</div>
+  <div class="test">word</div>
 </div>
