--- a/src/app/pages/sky-condition/sky-condition.component.html
+++ b/src/app/pages/sky-condition/sky-condition.component.html
@@ -34,4 +34,8 @@ orbital map + time above horizon
   <div class="venus" [style.--rotate.deg]="venusRotation"></div>
   <div class="mars" [style.--rotate.deg]="marsRotation"></div>
   <div class="jupiter" [style.--rotate.deg]="jupiterRotation"></div>
+  <div class="saturn" [style.--rotate.deg]="saturnRotation"></div>
+  <div class="uranus" [style.--rotate.deg]="uranusRotation"></div>
+  <div class="neptune" [style.--rotate.deg]="neptuneRotation"></div>
+  <div class="pluto" [style.--rotate.deg]="plutoRotation"></div>
 </div>
