--- a/src/app/pages/sky-condition/sky-condition.component.css
+++ b/src/app/pages/sky-condition/sky-condition.component.css
@@ -8,7 +8,7 @@ p {
   position: relative;
   width: var(--size);
   height: var(--size);
-  border: 8px solid black;
+  /*border: 8px solid black;*/
   border-radius: 50%;
 }
 
@@ -18,29 +18,165 @@ p {
   width: 2px;
   top: 0%;
   left: 50%;
-  background-color: green;
+  background-color: white;
   transform-origin: 50% 100%;
   transform: rotate(var(--rotate));
 }
 
 .mercury, .venus, .mars, .jupiter, .saturn, .uranus, .neptune, .pluto {
   position: absolute;
-  height: 40%;
+  height: 50%;
   width: 2px;
-  top: 10%;
+  top: 0%;
   left: 50%;
-  background-color: red;
+  /*background-color: red;*/
   transform-origin: 50% 100%;
   transform: rotate(var(--rotate));
 }
 
+/*normalized planet sizes
+1500, 3800, (4000), 2100, 43400, 36200, 15800, 15300, 715*/
+
 .mercury::before {
-  content: ">>";
-  color: red;
+  content: "";
+  --size: 1.6em;
+  --center: -0.8em;
+  position: absolute;
+  border-radius: 50%;
+  background-color: #FF8C00;
+  width: var(--size);
+  height: var(--size);
+  left: var(--center);
+  top: var(--center);
+  box-shadow:
+    inset 0 0 10px rgba(0,0,0,0.5),
+    inset 0 0 20px rgba(0,0,0,0.3),
+    inset 0 0 30px rgba(0,0,0,0.2),
+    inset 0 0 40px rgba(0,0,0,0.1);
 }
 
-.venus {
-  width: 4px;
+.venus::before {
+  content: "";
+  --size: 2.8em;
+  --center: -1.4em;
+  position: absolute;
+  border-radius: 50%;
+  background-color: #B8860B;
+  width: var(--size);
+  height: var(--size);
+  left: var(--center);
+  top: var(--center);
+  box-shadow:
+    inset 0 0 10px rgba(0,0,0,0.5),
+    inset 0 0 20px rgba(0,0,0,0.3),
+    inset 0 0 30px rgba(0,0,0,0.2),
+    inset 0 0 40px rgba(0,0,0,0.1);
 }
 
+.mars::before {
+  content: "";
+  --size: 2.2em;
+  --center: -1.1em;
+  position: absolute;
+  border-radius: 50%;
+  background-color: #B22222;
+  width: var(--size);
+  height: var(--size);
+  left: var(--center);
+  top: var(--center);
+  box-shadow:
+    inset 0 0 10px rgba(0,0,0,0.5),
+    inset 0 0 20px rgba(0,0,0,0.3),
+    inset 0 0 30px rgba(0,0,0,0.2),
+    inset 0 0 40px rgba(0,0,0,0.1);
+}
 
+.jupiter::before {
+  content: "";
+  --size: 5em;
+  --center: -2.5em;
+  position: absolute;
+  border-radius: 50%;
+  background-color: #EEE8AA;
+  width: var(--size);
+  height: var(--size);
+  left: var(--center);
+  top: var(--center);
+  box-shadow:
+    inset 0 0 10px rgba(0,0,0,0.5),
+    inset 0 0 20px rgba(0,0,0,0.3),
+    inset 0 0 30px rgba(0,0,0,0.2),
+    inset 0 0 40px rgba(0,0,0,0.1);
+}
+
+.saturn::before {
+  content: "";
+  --size: 4em;
+  --center: -2em;
+  position: absolute;
+  border-radius: 50%;
+  background-color: #FF7F50;
+  width: var(--size);
+  height: var(--size);
+  left: var(--center);
+  top: var(--center);
+  box-shadow:
+    inset 0 0 10px rgba(0,0,0,0.5),
+    inset 0 0 20px rgba(0,0,0,0.3),
+    inset 0 0 30px rgba(0,0,0,0.2),
+    inset 0 0 40px rgba(0,0,0,0.1);
+}
+
+.uranus::before {
+  content: "";
+  --size: 3em;
+  --center: -1.5em;
+  position: absolute;
+  border-radius: 50%;
+  background-color: #7FFFD4;
+  width: var(--size);
+  height: var(--size);
+  left: var(--center);
+  top: var(--center);
+  box-shadow:
+    inset 0 0 10px rgba(0,0,0,0.5),
+    inset 0 0 20px rgba(0,0,0,0.3),
+    inset 0 0 30px rgba(0,0,0,0.2),
+    inset 0 0 40px rgba(0,0,0,0.1);
+}
+
+.neptune::before {
+  content: "";
+  --size: 3em;
+  --center: -1.5em;
+  position: absolute;
+  border-radius: 50%;
+  background-color: #00FFFF;
+  width: var(--size);
+  height: var(--size);
+  left: var(--center);
+  top: var(--center);
+  box-shadow:
+    inset 0 0 10px rgba(0,0,0,0.5),
+    inset 0 0 20px rgba(0,0,0,0.3),
+    inset 0 0 30px rgba(0,0,0,0.2),
+    inset 0 0 40px rgba(0,0,0,0.1);
+}
+
+.pluto::before {
+  content: "";
+  --size: 1.2em;
+  --center: -0.6em;
+  position: absolute;
+  border-radius: 50%;
+  background-color: #FFEBCD;
+  width: var(--size);
+  height: var(--size);
+  left: var(--center);
+  top: var(--center);
+  box-shadow:
+    inset 0 0 10px rgba(0,0,0,0.5),
+    inset 0 0 20px rgba(0,0,0,0.3),
+    inset 0 0 30px rgba(0,0,0,0.2),
+    inset 0 0 40px rgba(0,0,0,0.1);
+}
