--- a/src/app/pages/view-saved-date/view-saved-date.component.css
+++ b/src/app/pages/view-saved-date/view-saved-date.component.css
@@ -33,7 +33,7 @@
   width: 2px;
   top: 10%;
   left: 50%;
-  /*background-color: red;*/
+  background-color: red;
   transform-origin: 50% 100%;
   transform: rotate(var(--rotate));
 }
@@ -75,7 +75,12 @@
   background-color: red;
   width: 4em;
   height: 4em;
-  box-shadow: 0 0 3em white;
+  left: -2em;
+  box-shadow:
+    inset 0 0 10px rgba(0,0,0,0.5),
+    inset 0 0 20px rgba(0,0,0,0.3),
+    inset 0 0 30px rgba(0,0,0,0.2),
+    inset 0 0 40px rgba(0,0,0,0.1);
 }
 
 .venus::after {
