dynamic geolocation complete

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,10 +1,10 @@
 <div id="sidebar">
-<a routerLink="/about" class="sidebarLink">About</a><br>
+<a routerLink="/about" class="sidebarLink">about</a><br>
   <a routerLink="/register" class="sidebarLink">Reg</a><br>
   <a routerLink="/login" class="sidebarLink">log</a><br>
-  <a routerLink="/sky-condition" class="sidebarLink">Current sky</a><br>
-  <a routerLink="/geolocation" class="sidebarLink">Select location</a><br>
-  <a routerLink="/constellation" class="sidebarLink">Track constellation</a><br>
-  <a routerLink="/view-saved-date" class="sidebarLink">View saved date</a><br>
-  <a routerLink="/harmonic-mapping" class="sidebarLink">Harmonic mapping</a><br>
+  <a routerLink="/sky-condition" class="sidebarLink">current sky</a><br>
+  <a routerLink="/geolocation" class="sidebarLink">select location</a><br>
+  <a routerLink="/constellation" class="sidebarLink">track constellation</a><br>
+  <a routerLink="/view-saved-date" class="sidebarLink">view saved date</a><br>
+  <a routerLink="/harmonic-mapping" class="sidebarLink">harmonic mapping</a><br>
 </div>
