--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,17 +1,7 @@
 <div>
 <p>
-  About: (unfinished) Connect numbers, letters, atoms, planets
-  Elementary school version:
-  tesla quote
-  modern day thinks about higher number as better, ancients thought of one as the prime number.  why? reason for this:
-  what is a harmonic defined mathematically and its connection to phi ratio in atoms ( need the image) measure of wholeness/resonance
-  connect harmonics to how ancients thought of higher numbers as a fraction of one
-  why is 12 important? why used in clock or zodiac?
-  how phi connects to the planetary motions and venus
-  every planet represents an archetype, it symbolically represents some function
-  how the construction of the english alphabet allows for transfer of energy/polarity of words (sun/son + news/noose)(live +evil)
-  positive/divergent vs negative/convergent words and connection to jupiter/saturn
-  examples hex- etc
+  The number 12 is used in clocks and the zodiac.  Why is 12 important?<br>
+  Every planet represents an archetype, it symbolically represents some function.
 
 </p>
 <br>
