--- a/src/app/pages/harmonic-mapping/harmonic-mapping.component.html
+++ b/src/app/pages/harmonic-mapping/harmonic-mapping.component.html
@@ -41,7 +41,7 @@
   </div>
 
   <div *ngIf="isSubmitted && harmonicForm.valid" class="harmonic">
-    <p>{{harmonicValue}}</p>
+    <p>Harmonic value: {{harmonicValue}}</p>
   </div>
 
 </div>
