--- a/src/app/pages/sky-condition/sky-condition.component.html
+++ b/src/app/pages/sky-condition/sky-condition.component.html
@@ -31,6 +31,7 @@
 
 <!--.data is component of api's response-->
 <div class="horizon">
+  <p>Planet @ constellation, <br>time: above horizon</p><br>
   <div class="horizonData" *ngFor="let item of apiList2.data">{{item.name}} @ {{item.constellation}}, time: {{item.rightAscension.hours}}: {{item.rightAscension.minutes}}</div>
 </div>
 
