--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 
 <div class="mainBody flex-grow"><router-outlet></router-outlet></div>
 
-<div *ngIf=true><app-sidebar></app-sidebar></div>
+<div *ngIf="isLoggedIn"><app-sidebar></app-sidebar></div>
 
 <footer>
   <p class="foot">&copy; pm</p>
